# TENN-main_edrak_fix

./: .gitignore  README.md
tenn_ai/: requirements.txt  setup.cfg
tenn_ai/src/tenn_ai/api/: chat.html  tenn_api.py
tenn_ai/src/tenn_ai/engage_ai/: callbacks.py  tenn.py  tenn.ui  tenn_engage_ai.py
tenn_ai/src/tenn_ai/fabric_ai/edrak/: tenn_edrak_ai.py  tenn_edrak_ai_api.py
tenn_ai/src/tenn_ai/fabric_ai/edrak/databases/: tenn_api_db.py  tenn_edrak_db.py  tenn_embed_db.py  tenn_input_db.py  tenn_object_db.py  tenn_organize_db.py  tenn_prompt_db.py  tenn_template_db.py  test_tenn_api_db.py  test_tenn_object_db.py
tenn_ai/src/tenn_ai/fabric_ai/edrak/stores/: tenn_nosql_db.py  tenn_sql_db.py  tenn_vector_db.py  test.py
tenn_ai/src/tenn_ai/fabric_ai/engage_ai/: callbacks.py  tenn.py  tenn_engage_ai.py
tenn_ai/src/tenn_ai/fabric_ai/generate_ai/: run.py  run_chatdev.py  tenn_generate_ai.py  tenn_intent_ai.py
tenn_ai/src/tenn_ai/fabric_ai/generate_ai/IntentConfig/TENN/: ChatChainConfig.json  PhaseConfig.json  RoleConfig.json
tenn_ai/src/tenn_ai/fabric_ai/generate_ai/camel/: __init__.py  generators.py  human.py  model_backend.py  utils.py
tenn_ai/src/tenn_ai/fabric_ai/generate_ai/camel/agents/: chat_agent.py  critic_agent.py  embodied_agent.py  role_playing.py  task_agent.py
tenn_ai/src/tenn_ai/fabric_ai/generate_ai/camel/agents/tool_agents/: base.py  hugging_face_tool_agent.py
tenn_ai/src/tenn_ai/fabric_ai/generate_ai/camel/messages/: base.py  chat_messages.py  system_messages.py
tenn_ai/src/tenn_ai/fabric_ai/generate_ai/camel/prompts/: base.py  prompt_templates.py  task_prompt_template.py
tenn_ai/src/tenn_ai/fabric_ai/generate_ai/chatdev/: chat_chain.py  chat_env.py  codes.py  composed_phase.py  phase.py  utils.py
tenn_ai/src/tenn_ai/fabric_ai/input_ai/: run_monitor.py  tenn_ingest.py  tenn_input_ai.py  tenn_input_ai_api.py  tenn_monitor.py
tenn_ai/src/tenn_ai/fabric_ai/input_ai/adapters/: tenn_audio_adapter.py  tenn_image_adapter.py  tenn_json_adapter.py  tenn_multimodal_adapter.py  tenn_pdf_adapter.py  tenn_powerpoint_adapter.py  tenn_sheet_adapter.py  tenn_string_adapter.py  tenn_text_adapter.py  tenn_webpage_adapter.py  tenn_word_adapter.py  tenn_youtube_adapter.py
tenn_ai/src/tenn_ai/fabric_ai/multi_ai/: tenn_multi_ai.py  test_multi_ai.py
tenn_ai/src/tenn_ai/fabric_ai/multi_ai/agents/: tenn_interpreter.py
tenn_ai/src/tenn_ai/fabric_ai/organize_ai/: tenn_organize_ai.py  tenn_organize_ai_api.py
tenn_ai/src/tenn_ai/fabric_ai/safe_ai/: tenn_safe_ai.py  tenn_safe_ai_api.py  tenn_safe_db.py  tenn_user_manager.py  test_safe_ai.py  test_safe_db.py
tenn_ai/src/tenn_ai/fabric_ai/template_ai/: tenn_template_ai.py
tenn_ai/src/tenn_ai/fabric_ai/utils/: tenn_config_ai.py  tenn_properties.py  tenn_utils.py  tenn_utils_api.py
tenn_ai/tests/: tests.py
